# CameraModule

./: CMakeLists.txt  README.md
Include/RVC/Camera/: CameraBase.h
Src/: BaslerCamera.cpp  BaslerCamera.h  CImageEventHandler.h  CameraSystem.cpp  HikCamera.cpp  HikCamera.h  ImageSize.h
Tests/: CMakeLists.txt  TestBaslerCamera.cpp  TestHikCamera.cpp
